tests/fail/namespace-att4.dit
A {
    list String value;
}

A a;

a.value = 'test';